--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
         "EliteMasterEric-Coroner-1.5.0",
         "Evaisa-HookGenPatcher-0.0.5",
         "Evaisa-LethalLib-0.9.0",
+        "Evaisa-LethalThings-0.8.8",
         "FlipMods-BetterStamina-1.3.2",
         "FlipMods-FasterItemDropship-1.2.0",
         "FlipMods-HotbarPlus-1.4.4",
@@ -30,6 +31,7 @@
         "monkes_mods-JumpDelayPatch-1.0.1",
         "MegaPiggy-BuyableShotgun-1.0.0",
         "MegaPiggy-BuyableShotgunShells-1.0.1",
+        "Nips-Brutal_Company_Plus-3.5.1",
         "no00ob-LCSoundTool-1.4.0",
         "PopleZoo-BetterItemScan-2.1.7",
         "RickArg-Helmet_Cameras-2.1.5",
