Updated to version 1.2.0

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "ABetterButBrutalModpack",
-    "version_number": "1.1.0",
+    "version_number": "1.2.0",
     "website_url": "https://github.com/WateryScoobydoo/aBetterButBrutalModpack",
     "description": "A Modpack containing LethalThings, Brutal Company Plus, Emotes, Quality of Life, Mimics, and Skinwalkers",
     "dependencies": [
@@ -22,15 +22,15 @@
         "FlipMods-FasterItemDropship-1.2.0",
         "FlipMods-HotbarPlus-1.4.4",
         "FlipMods-LetMeLookDown-1.0.1",
+        "FlipMods-MoreBlood-1.0.2",
         "FlipMods-ReservedItemSlotCore-1.7.0",
         "FlipMods-ReservedWalkieSlot-1.5.0",
+        "FlipMods-ReservedWeaponSlot-1.0.0",
         "FlipMods-ReservedFlashlightSlot-1.5.1",
         "Hexnet111-SuitSaver-1.1.2",
         "KoderTeh-Boombox_Controller-1.1.2",
         "matsuura-HealthMetrics-1.0.2",
         "monkes_mods-JumpDelayPatch-1.0.1",
-        "MegaPiggy-BuyableShotgun-1.0.0",
-        "MegaPiggy-BuyableShotgunShells-1.0.1",
         "Nips-Brutal_Company_Plus-3.5.1",
         "no00ob-LCSoundTool-1.4.0",
         "PopleZoo-BetterItemScan-2.1.7",
