--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,20 @@
 {
     "name": "ABetterButBrutalModpack",
-    "version_number": "1.2.1",
+    "version_number": "1.3.0",
     "website_url": "https://github.com/WateryScoobydoo/aBetterButBrutalModpack",
     "description": "A Modpack containing LethalThings, Brutal Company Plus, Emotes, Quality of Life, Mimics, and Skinwalkers",
     "dependencies": [
         "2018-LC_API-3.1.0",
-        "akechii-DiscountAlert-2.1.0",
+        "akechii-DiscountAlert-2.2.0",
         "AlexCodesGames-AdditionalSuits-1.1.3",
         "AllToasters-QuickRestart-1.2.0",
         "AllToasters-SpectateEnemies-2.0.0",
         "anormaltwig-LateCompany-1.0.7",
         "ATK-ShipClock-0.9.0",
+        "Azim-LethalPresents-1.0.3",
         "BepInEx-BepInExPack-5.4.2100",
         "bizzlemip-BiggerLobby-2.6.0",
+        "darmuh-ghostCodes-1.1.0",
         "Drakorle-MoreItems-1.0.1",
         "EliteMasterEric-Coroner-1.5.0",
         "Evaisa-HookGenPatcher-0.0.5",
@@ -36,12 +38,12 @@
         "PopleZoo-BetterItemScan-2.1.7",
         "RickArg-Helmet_Cameras-2.1.5",
         "RugbugRedfern-Skinwalkers-2.0.1",
-        "Rune580-LethalCompany_InputUtils-0.4.3",
+        "Rune580-LethalCompany_InputUtils-0.4.4",
         "Sligili-HDLethalCompany-1.5.6",
         "Sligili-More_Emotes-1.2.2",
         "taffyko-NameplateTweaks-1.0.5",
         "tinyhoot-ShipLoot-1.0.0",
-        "TheDeadSnake-Touchscreen-1.0.6",
+        "TheDeadSnake-Touchscreen-1.0.7",
         "Verity-TooManySuits-1.0.4",
         "x753-Mimics-2.3.0",
         "x753-More_Suits-1.4.1"
