--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "ABetterButBrutalModpack",
-    "version_number": "1.3.0",
+    "version_number": "1.3.1",
     "website_url": "https://github.com/WateryScoobydoo/aBetterButBrutalModpack",
-    "description": "A Modpack containing LethalThings, Brutal Company Plus, Emotes, Quality of Life, Mimics, and Skinwalkers",
+    "description": "A Modpack containing LethalThings, Brutal Company Plus, Emotes, Quality of Life, Mimics, Skinwalkers and more!",
     "dependencies": [
         "2018-LC_API-3.1.0",
         "akechii-DiscountAlert-2.2.0",
@@ -25,10 +25,10 @@
         "FlipMods-HotbarPlus-1.4.4",
         "FlipMods-LetMeLookDown-1.0.1",
         "FlipMods-MoreBlood-1.0.2",
-        "FlipMods-ReservedItemSlotCore-1.7.0",
-        "FlipMods-ReservedWalkieSlot-1.5.0",
+        "FlipMods-ReservedItemSlotCore-1.7.1",
+        "FlipMods-ReservedWalkieSlot-1.5.1",
         "FlipMods-ReservedWeaponSlot-1.0.0",
-        "FlipMods-ReservedFlashlightSlot-1.5.1",
+        "FlipMods-ReservedFlashlightSlot-1.5.2",
         "Hexnet111-SuitSaver-1.1.2",
         "KoderTeh-Boombox_Controller-1.1.2",
         "matsuura-HealthMetrics-1.0.2",
