--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "ABetterButBrutalModpack",
-    "version_number": "1.3.2",
+    "version_number": "1.3.3",
     "website_url": "https://github.com/WateryScoobydoo/aBetterButBrutalModpack",
     "description": "A Modpack containing LethalThings, Brutal Company Plus, Emotes, Quality of Life, Mimics, Skinwalkers and more!",
     "dependencies": [
@@ -37,6 +37,7 @@
         "monkes_mods-JumpDelayPatch-1.0.1",
         "Nips-Brutal_Company_Plus-3.5.1",
         "no00ob-LCSoundTool-1.4.0",
+        "Norman-GlowStickSuits-1.0.4",
         "PopleZoo-BetterItemScan-2.1.7",
         "RickArg-Helmet_Cameras-2.1.5",
         "RugbugRedfern-Skinwalkers-2.0.1",
