--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,24 @@
 {
     "name": "ABetterButBrutalModpack",
-    "version_number": "1.3.3",
+    "version_number": "1.4.0",
     "website_url": "https://github.com/WateryScoobydoo/aBetterButBrutalModpack",
     "description": "A Modpack containing LethalThings, Brutal Company Plus, Emotes, Quality of Life, Mimics, Skinwalkers and more!",
     "dependencies": [
         "2018-LC_API-3.2.2",
-        "akechii-DiscountAlert-2.2.0",
+        "akechii-DiscountAlert-2.3.0",
         "AlexCodesGames-AdditionalSuits-1.1.3",
         "AllToasters-QuickRestart-1.2.0",
         "AllToasters-SpectateEnemies-2.0.0",
-        "anormaltwig-LateCompany-1.0.7",
+        "anormaltwig-LateCompany-1.0.8",
         "ATK-ShipClock-0.9.0",
         "Azim-LethalPresents-1.0.3",
+        "BatTeam-LethalFashion-1.0.4",
         "BepInEx-BepInExPack-5.4.2100",
         "bizzlemip-BiggerLobby-2.6.0",
+        "CTMods-KarmaForBeingAnnoying-1.1.0",
         "darmuh-ghostCodes-1.1.0",
         "Drakorle-MoreItems-1.0.1",
-        "EliteMasterEric-Coroner-1.5.1",
+        "EliteMasterEric-Coroner-1.5.3",
         "Evaisa-HookGenPatcher-0.0.5",
         "Evaisa-LethalLib-0.9.0",
         "Evaisa-LethalThings-0.8.8",
@@ -30,15 +32,18 @@
         "FlipMods-ReservedWeaponSlot-1.0.0",
         "FlipMods-ReservedFlashlightSlot-1.5.2",
         "FutureSavior-Hold_Scan_Button-1.1.1",
+        "gamehog44-LethalRadiation-1.2.1",
         "Hexnet111-SuitSaver-1.1.2",
         "HomelessGinger-MaskedEnemyOverhaul-2.1.0",
-        "KoderTeh-Boombox_Controller-1.1.2",
+        "KoderTeh-Boombox_Controller-1.1.3",
         "matsuura-HealthMetrics-1.0.2",
         "monkes_mods-JumpDelayPatch-1.0.1",
+        "mrov-LethalRichPresence-0.3.1",
         "Nips-Brutal_Company_Plus-3.5.1",
         "no00ob-LCSoundTool-1.4.0",
         "Norman-GlowStickSuits-1.0.4",
         "PopleZoo-BetterItemScan-2.1.7",
+        "RedaOps-FunMines-1.2.0",
         "RickArg-Helmet_Cameras-2.1.5",
         "RugbugRedfern-Skinwalkers-2.0.1",
         "Rune580-LethalCompany_InputUtils-0.4.4",
