--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "ABetterButBrutalModpack",
-    "version_number": "1.4.2",
+    "version_number": "1.4.3",
     "website_url": "https://github.com/WateryScoobydoo/aBetterButBrutalModpack",
     "description": "A Modpack containing LethalThings, Brutal Company Plus, Emotes, Quality of Life, Mimics, Skinwalkers and more!",
     "dependencies": [
@@ -9,7 +9,7 @@
         "AlexCodesGames-AdditionalSuits-1.1.3",
         "AllToasters-QuickRestart-1.2.0",
         "AllToasters-SpectateEnemies-2.0.0",
-        "anormaltwig-LateCompany-1.0.8",
+        "anormaltwig-LateCompany-1.0.9",
         "ATK-ShipClock-0.9.0",
         "Azim-LethalPresents-1.0.3",
         "BatTeam-LethalFashion-1.0.4",
@@ -24,21 +24,24 @@
         "Evaisa-LethalThings-0.8.8",
         "FlipMods-BetterStamina-1.3.2",
         "FlipMods-FasterItemDropship-1.2.0",
-        "FlipMods-HotbarPlus-1.4.5",
+        "FlipMods-HotbarPlus-1.4.6",
         "FlipMods-LetMeLookDown-1.0.1",
         "FlipMods-MoreBlood-1.0.2",
-        "FlipMods-ReservedItemSlotCore-1.7.2",
+        "FlipMods-ReservedItemSlotCore-1.7.3",
         "FlipMods-ReservedWalkieSlot-1.5.1",
         "FlipMods-ReservedWeaponSlot-1.0.0",
-        "FlipMods-ReservedFlashlightSlot-1.5.2",
+        "FlipMods-ReservedFlashlightSlot-1.5.3",
         "FutureSavior-Hold_Scan_Button-1.1.1",
         "gamehog44-LethalRadiation-1.2.1",
         "Hexnet111-SuitSaver-1.1.2",
         "HomelessGinger-MaskedEnemyOverhaul-2.1.0",
-        "KoderTeh-Boombox_Controller-1.1.3",
+        "itsmeowdev-DoorFix-1.0.0",
+        "KoderTeh-Boombox_Controller-1.1.4",
+        "linkoid-DissonanceLagFix-1.0.0",
+        "MassiveNewCoilers-FixCentipedeLag-2023.12.7",
         "matsuura-HealthMetrics-1.0.2",
         "monkes_mods-JumpDelayPatch-1.0.1",
-        "mrov-LethalRichPresence-0.4.0",
+        "mrov-LethalRichPresence-0.4.1",
         "Nips-Brutal_Company_Plus-3.5.1",
         "no00ob-LCSoundTool-1.4.0",
         "Norman-GlowStickSuits-1.0.4",
@@ -50,7 +53,7 @@
         "Sligili-More_Emotes-1.2.2",
         "taffyko-NameplateTweaks-1.0.5",
         "tinyhoot-ShipLoot-1.0.0",
-        "TheDeadSnake-Touchscreen-1.0.7",
+        "TheDeadSnake-Touchscreen-1.0.8",
         "TwinDimensionalProductions-CoilHeadStare-1.0.3",
         "Verity-TooManySuits-1.0.4",
         "x753-Mimics-2.3.0",
