Updated to version 1.5.0

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "ABetterButBrutalModpack",
-    "version_number": "1.4.5",
+    "version_number": "1.5.0",
     "website_url": "https://github.com/WateryScoobydoo/aBetterButBrutalModpack",
     "description": "A Modpack containing LethalThings, Brutal Company Plus, Emotes, Quality of Life, Mimics, Skinwalkers and more!",
     "dependencies": [
@@ -10,11 +10,10 @@
         "AllToasters-QuickRestart-1.2.0",
         "AllToasters-SpectateEnemies-2.1.1",
         "anormaltwig-LateCompany-1.0.9",
-        "ATK-ShipClock-0.9.0",
         "Azim-LethalPresents-1.0.4",
         "BatTeam-LethalFashion-1.0.4",
         "BepInEx-BepInExPack-5.4.2100",
-        "bizzlemip-BiggerLobby-2.6.0",
+        "Ceelery-Kast-1.0.3",
         "CTMods-KarmaForBeingAnnoying-1.1.0",
         "darmuh-ghostCodes-1.1.0",
         "Drakorle-MoreItems-1.0.1",
@@ -34,6 +33,7 @@
         "FutureSavior-Hold_Scan_Button-1.1.1",
         "gamehog44-LethalRadiation-1.2.1",
         "Hexnet111-SuitSaver-1.1.2",
+        "HolographicWings-LethalExpansion-1.3.14",
         "HomelessGinger-MaskedEnemyOverhaul-2.2.1",
         "itsmeowdev-DoorFix-1.0.0",
         "KoderTeh-Boombox_Controller-1.1.5",
@@ -45,18 +45,22 @@
         "Nips-Brutal_Company_Plus-3.5.1",
         "no00ob-LCSoundTool-1.4.0",
         "Norman-GlowStickSuits-1.0.4",
-        "PopleZoo-BetterItemScan-2.1.8",
+        "notnotnotswipez-MoreCompany-1.7.2",
+        "PopleZoo-BetterItemScan-2.1.9",
+        "quackandcheese-MirrorDecor-1.2.2",
         "RickArg-Helmet_Cameras-2.1.5",
         "RugbugRedfern-Skinwalkers-2.0.1",
         "Rune580-LethalCompany_InputUtils-0.4.4",
+        "scoopy-Scoopys_Variety_Mod-0.5.1",
         "Sligili-HDLethalCompany-1.5.6",
         "Sligili-More_Emotes-1.2.2",
         "taffyko-NameplateTweaks-1.0.5",
         "tinyhoot-ShipLoot-1.0.0",
+        "TheBeeTeam-LandmineFix-1.0.1",
         "TheDeadSnake-Touchscreen-1.0.8",
         "TwinDimensionalProductions-CoilHeadStare-1.0.3",
         "Verity-TooManySuits-1.0.5",
-        "x753-Mimics-2.3.0",
+        "x753-Mimics-2.3.1",
         "x753-More_Suits-1.4.1"
     ]
 }
