--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,6 @@
         "2018-LC_API-3.3.0",
         "akechii-DiscountAlert-2.3.0",
         "AlexCodesGames-AdditionalSuits-1.1.3",
-        "AllToasters-QuickRestart-1.2.0",
         "AllToasters-SpectateEnemies-2.1.1",
         "anormaltwig-LateCompany-1.0.9",
         "Azim-LethalPresents-1.0.4",
@@ -36,10 +35,12 @@
         "HolographicWings-LethalExpansion-1.3.14",
         "HomelessGinger-MaskedEnemyOverhaul-2.2.1",
         "itsmeowdev-DoorFix-1.0.0",
+        "Jamil-Corporate_Restructure-1.0.5",
         "KoderTeh-Boombox_Controller-1.1.5",
         "linkoid-DissonanceLagFix-1.0.0",
         "MassiveNewCoilers-FixCentipedeLag-2023.12.7",
         "matsuura-HealthMetrics-1.0.2",
+        "Mhz-MoreHead-1.2.2",
         "monkes_mods-JumpDelayPatch-1.0.1",
         "mrov-LethalRichPresence-0.5.2",
         "Nips-Brutal_Company_Plus-3.5.1",
