--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "ABetterButBrutalModpack",
-    "version_number": "1.5.0",
+    "version_number": "1.5.1",
     "website_url": "https://github.com/WateryScoobydoo/aBetterButBrutalModpack",
     "description": "A Modpack containing LethalThings, Brutal Company Plus, Emotes, Quality of Life, Mimics, Skinwalkers and more!",
     "dependencies": [
@@ -22,13 +22,13 @@
         "Evaisa-LethalThings-0.8.8",
         "FlipMods-BetterStamina-1.3.2",
         "FlipMods-FasterItemDropship-1.2.0",
-        "FlipMods-HotbarPlus-1.4.7",
+        "FlipMods-HotbarPlus-1.4.8",
         "FlipMods-LetMeLookDown-1.0.1",
         "FlipMods-MoreBlood-1.0.2",
         "FlipMods-ReservedItemSlotCore-1.7.7",
         "FlipMods-ReservedWalkieSlot-1.5.3",
         "FlipMods-ReservedWeaponSlot-1.0.3",
-        "FlipMods-ReservedFlashlightSlot-1.5.5",
+        "FlipMods-ReservedFlashlightSlot-1.5.7",
         "FutureSavior-Hold_Scan_Button-1.1.1",
         "gamehog44-LethalRadiation-1.2.1",
         "Hexnet111-SuitSaver-1.1.2",
@@ -47,12 +47,14 @@
         "no00ob-LCSoundTool-1.4.0",
         "Norman-GlowStickSuits-1.0.4",
         "notnotnotswipez-MoreCompany-1.7.2",
-        "PopleZoo-BetterItemScan-2.1.9",
+        "PopleZoo-BetterItemScan-3.0.0",
         "quackandcheese-MirrorDecor-1.2.2",
         "RickArg-Helmet_Cameras-2.1.5",
         "RugbugRedfern-Skinwalkers-2.0.1",
         "Rune580-LethalCompany_InputUtils-0.4.4",
         "scoopy-Scoopys_Variety_Mod-0.5.1",
+        "sfDesat-Aquatis-0.4.2",
+        "sfDesat-Orion-1.1.3",
         "Sligili-HDLethalCompany-1.5.6",
         "Sligili-More_Emotes-1.2.2",
         "taffyko-NameplateTweaks-1.0.5",
