Updated to version 1.5.4

--- a/BepInEx/config/LethalThings.AudioVolume.cfg
+++ b/BepInEx/config/LethalThings.AudioVolume.cfg
@@ -40,6 +40,26 @@ Glizzy = 80
 # Default value: 100
 Revolver = 80
 
+## Audio volume for GremlinEnergy (0 - 100)
+# Setting type: Single
+# Default value: 100
+GremlinEnergy = 80
+
+## Audio volume for ToyHammerScrap (0 - 100)
+# Setting type: Single
+# Default value: 100
+ToyHammerScrap = 100
+
+## Audio volume for Gnarpy (0 - 100)
+# Setting type: Single
+# Default value: 100
+Gnarpy = 100
+
+## Audio volume for RocketLauncher (0 - 100)
+# Setting type: Single
+# Default value: 100
+RocketLauncher = 80
+
 ## Audio volume for Flaregun (0 - 100)
 # Setting type: Single
 # Default value: 100
@@ -50,30 +70,35 @@ Flaregun = 80
 # Default value: 100
 FlaregunAmmo = 80
 
-## Audio volume for ToyHammer (0 - 100)
+## Audio volume for ToyHammerShop (0 - 100)
 # Setting type: Single
 # Default value: 100
-ToyHammer = 80
+ToyHammerShop = 100
 
 ## Audio volume for RemoteRadar (0 - 100)
 # Setting type: Single
 # Default value: 100
 RemoteRadar = 80
 
+## Audio volume for PouchyBelt (0 - 100)
+# Setting type: Single
+# Default value: 100
+PouchyBelt = 80
+
 ## Audio volume for HackingTool (0 - 100)
 # Setting type: Single
 # Default value: 100
 HackingTool = 80
 
+## Audio volume for Pinger (0 - 100)
+# Setting type: Single
+# Default value: 100
+Pinger = 100
+
 ## Audio volume for Dart (0 - 100)
 # Setting type: Single
 # Default value: 100
 Dart = 80
-
-## Audio volume for GremlinEnergy (0 - 100)
-# Setting type: Single
-# Default value: 100
-GremlinEnergy = 80
 
 ## Audio volume for SmallRug (0 - 100)
 # Setting type: Single
@@ -105,7 +130,5 @@ Boomba = 80
 # Default value: 100
 TeleporterTrap = 80
 
-RocketLauncher = 80
-
-PouchyBelt = 80
+ToyHammer = 80
 
