--- a/BepInEx/config/MaskedEnemyRework.cfg
+++ b/BepInEx/config/MaskedEnemyRework.cfg
@@ -1,12 +1,22 @@
-## Settings file was created by plugin MaskedEnemyRework v2.1.0
+## Settings file was created by plugin MaskedEnemyRework v2.4.0
 ## Plugin GUID: MaskedEnemyRework
 
 [General]
+
+## Will show username of player being mimicked.
+# Setting type: Boolean
+# Default value: false
+Show Masked Usernames = true
 
 ## Whether or not the Masked Enemy has a mask on.
 # Setting type: Boolean
 # Default value: true
 Remove Mask From Masked Enemy = true
+
+## The enemy would reveal their mask permanently after trying to attack someone. Mask would be off until the attempt to attack is made
+# Setting type: Boolean
+# Default value: false
+Reveal Mask When Attacking = false
 
 ## Remove the animation where the Masked raise arms like a zombie.
 # Setting type: Boolean
@@ -76,3 +86,4 @@ Midday Outside Masked Spawn Curve = -30
 # Setting type: Single
 # Default value: 10
 EOD Outside Masked Spawn Curve = 10
+
