--- a/BepInEx/config/me.pm.TheDeadSnake.cfg
+++ b/BepInEx/config/me.pm.TheDeadSnake.cfg
@@ -1,4 +1,4 @@
-## Settings file was created by plugin TouchScreen v1.0.7
+## Settings file was created by plugin TouchScreen v1.0.8
 ## Plugin GUID: me.pm.TheDeadSnake
 
 [Features]
@@ -56,7 +56,7 @@ SwitchAlternative =
 
 ## Accepts a file name relative to the plugin name or a full system path
 ## You can either choose one of the three default icons "HoverIcon.png", "CrossIcon.png", "DotIcon.png" or
-## create your own (Only .png and .jpg are supported) and place it in: C:\Users\Benja\AppData\Roaming\Thunderstore Mod Manager\DataFolder\LethalCompany\profiles\Better But Brutal Mods\BepInEx\plugins\TheDeadSnake-Touchscreen
+## create your own (Only .png and .jpg are supported) and place it in: C:\Users\PCNAME\AppData\Roaming\Thunderstore Mod Manager\DataFolder\LethalCompany\profiles\A Better But Brutal Modpack\BepInEx\plugins\TheDeadSnake-Touchscreen
 ## Examples: "HoverIcon.png" or "X:\Images\SomeImage.png"
 # Setting type: String
 # Default value: HoverIcon.png
