Updated to version 1.6.0

--- a/BepInEx/config/SpectateEnemy.cfg
+++ b/BepInEx/config/SpectateEnemy.cfg
@@ -1,20 +1,23 @@
-## Settings file was created by plugin SpectateEnemy v1.5.0
-## Plugin GUID: SpectateEnemy
-
-[Config]
-
-## Enables spectating turrets.
-# Setting type: Boolean
-# Default value: false
-Spectate Turrets = false
-
-## Enables spectating landmines.
-# Setting type: Boolean
-# Default value: false
-Spectate Landmines = false
-
-## Enables spectating passive enemies, such as Docile Locust Bees and Manticoils.
-# Setting type: Boolean
-# Default value: false
-Spectate Passives = false
-
+Maggie:True
+Boomba:True
+Manticoil:False
+Blob:True
+Flowerman:True
+Bunker Spider:True
+Nutcracker:True
+Crawler:True
+Baboon hawk:True
+Red Locust Bees:False
+Puffer:True
+MouthDog:True
+Masked:True
+Centipede:True
+Jester:True
+Spring:True
+Hoarding bug:True
+Earth Leviathan:True
+Docile Locust Bees:False
+Girl:True
+ForestGiant:True
+Landmine:False
+Turret:False
