--- a/manifest.json
+++ b/manifest.json
@@ -1,70 +1,82 @@
 {
     "name": "ABetterButBrutalModpack",
-    "version_number": "1.5.4",
+    "version_number": "1.6.0",
     "website_url": "https://github.com/WateryScoobydoo/aBetterButBrutalModpack",
     "description": "A Modpack containing LethalThings, Brutal Company Plus, Emotes, Quality of Life, Mimics, Skinwalkers and more!",
     "dependencies": [
-        "2018-LC_API-3.4.1",
+        "2018-LC_API-3.4.5",
         "5Bit-VoiceHUD-1.0.4",
         "akechii-DiscountAlert-2.3.0",
         "AlexCodesGames-AdditionalContentFramework-1.0.3",
         "AlexCodesGames-AdditionalSuits-2.0.0",
         "AllToasters-SpectateEnemies-2.2.1",
         "anormaltwig-LateCompany-1.0.10",
+        "AudioKnight-StarlancerMoons-0.2.1",
         "Azim-LethalPresents-1.0.4",
         "BatTeam-LethalFashion-1.0.6",
         "BepInEx-BepInExPack-5.4.2100",
+        "bigmcnugget-VanillaContentExpansion-0.1.6",
+        "blink9803-DimmingFlashlights-1.0.1",
         "Blorb-WeatherMultipliers-1.1.0",
         "Ceelery-Kast-1.0.3",
         "CTMods-KarmaForBeingAnnoying-1.1.0",
-        "darmuh-ghostCodes-1.5.0",
+        "darmuh-ghostCodes-1.5.1",
         "Drakorle-MoreItems-1.0.2",
         "EliteMasterEric-Coroner-1.5.3",
+        "EliteMasterEric-SlimeTamingFix-1.0.2",
         "Evaisa-HookGenPatcher-0.0.5",
-        "Evaisa-LethalLib-0.13.0",
+        "Evaisa-LethalLib-0.13.2",
         "Evaisa-LethalThings-0.9.4",
         "FlipMods-BetterStamina-1.3.2",
         "FlipMods-FasterItemDropship-1.2.0",
-        "FlipMods-HotbarPlus-1.5.4",
+        "FlipMods-HotbarPlus-1.5.7",
         "FlipMods-LetMeLookDown-1.0.1",
         "FlipMods-MoreBlood-1.0.2",
-        "FlipMods-ReservedItemSlotCore-1.8.10",
-        "FlipMods-ReservedWalkieSlot-1.5.5",
+        "FlipMods-ReservedItemSlotCore-1.8.12",
+        "FlipMods-ReservedWalkieSlot-1.6.0",
         "FlipMods-ReservedWeaponSlot-1.0.6",
-        "FlipMods-ReservedFlashlightSlot-1.5.10",
+        "FlipMods-ReservedFlashlightSlot-1.6.1",
         "FutureSavior-Hold_Scan_Button-1.1.1",
         "gamehog44-LethalRadiation-1.2.1",
         "Hexnet111-SuitSaver-1.1.4",
-        "HolographicWings-LethalExpansion-1.3.19",
-        "HomelessGinger-MaskedEnemyOverhaul-3.0.0",
-        "IAmBatby-LethalLevelLoader-1.0.6",
+        "HGG-JigglePhysicsPlugin-1.1.1",
+        "HolographicWings-LethalExpansion-1.3.21",
+        "HomelessGinger-MaskedEnemyOverhaul-3.1.0",
+        "IAmBatby-LethalLevelLoader-1.0.7",
         "itsmeowdev-DoorFix-1.0.0",
         "Jamil-Corporate_Restructure-1.0.6",
+        "jockie-LethalExpansionCore-1.3.14",
+        "JunLethalCompany-GamblingMachineAtTheCompany-1.3.5",
+        "KayNetsua-E_Gypt_Moon-2.0.8",
         "KoderTeh-Boombox_Controller-1.1.8",
         "linkoid-DissonanceLagFix-1.0.0",
         "MassiveNewCoilers-FixCentipedeLag-2023.12.7",
         "matsuura-HealthMetrics-1.0.2",
-        "Mhz-MoreHead-1.2.3",
+        "Mhz-MoreHead-1.2.4",
         "monkes_mods-JumpDelayPatch-1.0.1",
-        "mrov-LethalRichPresence-0.5.3",
+        "mrov-LethalRichPresence-0.5.6",
+        "mrov-OrbitRecharge-0.0.3",
         "Nips-Brutal_Company_Plus-3.5.1",
-        "no00ob-LCSoundTool-1.4.0",
+        "no00ob-LCSoundTool-1.5.0",
         "Norman-GlowStickSuits-1.0.4",
         "notnotnotswipez-MoreCompany-1.7.4",
         "Ozone-Runtime_Netcode_Patcher-0.2.5",
         "PopleZoo-BetterItemScan-3.0.0",
-        "quackandcheese-MirrorDecor-1.2.3",
+        "quackandcheese-MirrorDecor-1.3.0",
+        "quackandcheese-ToggleMute-1.3.0",
         "RickArg-Helmet_Cameras-2.1.5",
         "RugbugRedfern-Skinwalkers-4.0.1",
         "Rune580-LethalCompany_InputUtils-0.5.5",
         "scoopy-Scoopys_Variety_Mod-0.6.5",
-        "sfDesat-Aquatis-0.4.2",
-        "sfDesat-Orion-1.2.0",
+        "sfDesat-Aquatis-1.0.1",
+        "sfDesat-Celest-0.2.1",
+        "sfDesat-Orion-1.2.3",
+        "sfDesat-ExpansionAssets-1.0.0",
         "Sligili-HDLethalCompany-1.5.6",
         "Sligili-More_Emotes-1.3.3",
         "taffyko-NameplateTweaks-1.0.6",
         "taffyko-NiceChat-1.2.4",
-        "TeamClark-SCP_Foundation_Suit-1.0.1",
+        "TeamClark-SCP_Foundation_Suit-1.1.0",
         "tinyhoot-ShipLoot-1.0.0",
         "TheBeeTeam-LandmineFix-1.0.1",
         "TheDeadSnake-Touchscreen-1.0.8",
@@ -72,7 +84,9 @@
         "Verity-TooManySuits-1.0.5",
         "ViViKo-AllTheScrap-1.0.1",
         "ViViKo-AmongUsSuits-1.0.2",
+        "ViViKo-NoSellLimit-1.0.1",
         "ViViKo-SquidGameSuits-1.0.1",
+        "willis81808-LethalSettings-1.3.0",
         "x753-Mimics-2.3.2",
         "x753-More_Suits-1.4.1"
     ]
